add doctor to blockchain
