# restapi/operations/insurance/create_doctor_credential_responses.go
@@ -1,0 +1,130 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package insurance
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/ccamaleon5/SaludChainClient/models"
+)
+
+// CreateDoctorCredentialOKCode is the HTTP code returned for type CreateDoctorCredentialOK
+const CreateDoctorCredentialOKCode int = 200
+
+/*CreateDoctorCredentialOK successful operation
+
+swagger:response createDoctorCredentialOK
+*/
+type CreateDoctorCredentialOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Credential `json:"body,omitempty"`
+}
+
+// NewCreateDoctorCredentialOK creates CreateDoctorCredentialOK with default headers values
+func NewCreateDoctorCredentialOK() *CreateDoctorCredentialOK {
+
+	return &CreateDoctorCredentialOK{}
+}
+
+// WithPayload adds the payload to the create doctor credential o k response
+func (o *CreateDoctorCredentialOK) WithPayload(payload *models.Credential) *CreateDoctorCredentialOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create doctor credential o k response
+func (o *CreateDoctorCredentialOK) SetPayload(payload *models.Credential) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateDoctorCredentialOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// CreateDoctorCredentialNoContentCode is the HTTP code returned for type CreateDoctorCredentialNoContent
+const CreateDoctorCredentialNoContentCode int = 204
+
+/*CreateDoctorCredentialNoContent Patient doesn't exist
+
+swagger:response createDoctorCredentialNoContent
+*/
+type CreateDoctorCredentialNoContent struct {
+}
+
+// NewCreateDoctorCredentialNoContent creates CreateDoctorCredentialNoContent with default headers values
+func NewCreateDoctorCredentialNoContent() *CreateDoctorCredentialNoContent {
+
+	return &CreateDoctorCredentialNoContent{}
+}
+
+// WriteResponse to the client
+func (o *CreateDoctorCredentialNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(204)
+}
+
+// CreateDoctorCredentialBadRequestCode is the HTTP code returned for type CreateDoctorCredentialBadRequest
+const CreateDoctorCredentialBadRequestCode int = 400
+
+/*CreateDoctorCredentialBadRequest Invalid data supplied
+
+swagger:response createDoctorCredentialBadRequest
+*/
+type CreateDoctorCredentialBadRequest struct {
+}
+
+// NewCreateDoctorCredentialBadRequest creates CreateDoctorCredentialBadRequest with default headers values
+func NewCreateDoctorCredentialBadRequest() *CreateDoctorCredentialBadRequest {
+
+	return &CreateDoctorCredentialBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *CreateDoctorCredentialBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// CreateDoctorCredentialInternalServerErrorCode is the HTTP code returned for type CreateDoctorCredentialInternalServerError
+const CreateDoctorCredentialInternalServerErrorCode int = 500
+
+/*CreateDoctorCredentialInternalServerError Error Internal Server
+
+swagger:response createDoctorCredentialInternalServerError
+*/
+type CreateDoctorCredentialInternalServerError struct {
+}
+
+// NewCreateDoctorCredentialInternalServerError creates CreateDoctorCredentialInternalServerError with default headers values
+func NewCreateDoctorCredentialInternalServerError() *CreateDoctorCredentialInternalServerError {
+
+	return &CreateDoctorCredentialInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *CreateDoctorCredentialInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
