# swagger/swaggerui/swagger.json
@@ -95,6 +95,64 @@
         }
       }
     },
+    "/insurance/credential/doctor": {
+      "post": {
+        "tags": [
+          "insurance"
+        ],
+        "summary": "Create Health Insurance Doctor Credential",
+        "description": "This service is responsible for generating health insurance doctor credential, storing the credential hash in the blockchain. You send the credential data with type of credential, range of valid dates and evidence generated about credential as optional",
+        "operationId": "createDoctorCredential",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created Doctor health credential object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CredentialSubject"
+            }
+          },
+          {
+            "in": "header",
+            "name": "publicKey",
+            "required": true,
+            "type": "string",
+            "description": "The Doctor's public key"
+          },
+          {
+            "in": "header",
+            "name": "idAccount",
+            "required": true,
+            "type": "string",
+            "description": "Doctor Id Account"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Credential"
+            }
+          },
+          "204": {
+            "description": "Patient doesn't exist"
+          },
+          "400": {
+            "description": "Invalid data supplied"
+          },
+          "500": {
+            "description": "Error Internal Server"
+          }
+        }
+      }
+    },
     "/insurance/credential/{publicKey}": {
       "get": {
         "tags": [
